# yarp-devices-ros

./: CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/ControlBoard_nws_ros/: CMakeLists.txt  ControlBoard_nws_ros.cpp  ControlBoard_nws_ros.h
src/devices/FrameGrabber_nws_ros/: CMakeLists.txt  FrameGrabber_nws_ros.cpp  FrameGrabber_nws_ros.h
src/devices/RGBDRosConversionUtils/: CMakeLists.txt  RGBDRosConversionUtils.cpp  RGBDRosConversionUtils.h  rosPixelCode.cpp  rosPixelCode.h
src/devices/RGBDSensorFromRosTopic/: CMakeLists.txt  RGBDSensorFromRosTopic.cpp  RGBDSensorFromRosTopic.h
src/devices/RGBDSensor_nws_ros/: CMakeLists.txt  RgbdSensor_nws_ros.cpp  RgbdSensor_nws_ros.h
src/devices/RGBDToPointCloudSensor_nws_ros/: CMakeLists.txt  RGBDToPointCloudSensor_nws_ros.cpp  RGBDToPointCloudSensor_nws_ros.h
src/devices/Rangefinder2D_nws_ros/: CMakeLists.txt  Rangefinder2D_nws_ros.cpp  Rangefinder2D_nws_ros.h
src/devices/frameTransformGet_nwc_ros/: CMakeLists.txt  FrameTransformGet_nwc_ros.cpp  FrameTransformGet_nwc_ros.h
src/devices/frameTransformSet_nwc_ros/: CMakeLists.txt  FrameTransformSet_nwc_ros.cpp  FrameTransformSet_nwc_ros.h
src/devices/laserFromRosTopic/: CMakeLists.txt  LaserFromRosTopic.cpp  LaserFromRosTopic.h
src/devices/localization2D_nws_ros/: CMakeLists.txt  Localization2D_nws_ros.cpp  Localization2D_nws_ros.h
src/devices/map2DServer/: map2D_nws_ros.h
src/devices/map2D_nws_ros/: CMakeLists.txt  Map2D_nws_ros.cpp  Map2D_nws_ros.h
src/devices/map2D_nws_ros/tests/: CMakeLists.txt  Map2DnwsRosTest.cpp
src/devices/mobileBaseVelocityControl_nws_ros/: CMakeLists.txt  MobileBaseVelocityControl_nws_ros.cpp  MobileBaseVelocityControl_nws_ros.h
src/devices/multipleAnalogSensorsRosPublishers/: CMakeLists.txt  GenericSensorRosPublisher.h  IMURosPublisher.cpp  IMURosPublisher.h  MagneticFieldRosPublisher.cpp  MagneticFieldRosPublisher.h  PoseStampedRosPublisher.cpp  PoseStampedRosPublisher.h  TemperatureRosPublisher.cpp  TemperatureRosPublisher.h  WrenchStampedRosPublisher.cpp  WrenchStampedRosPublisher.h
src/devices/odometry2D_nws_ros/: CMakeLists.txt  Odometry2D_nws_ros.cpp  Odometry2D_nws_ros.h
tests/: CMakeLists.txt
tests/misc/: check_style.pl  check_tests_skip.txt
