# SPDX-FileCopyrightText: 2023 Istituto Italiano di Tecnologia (IIT)
# SPDX-License-Identifier: BSD-3-Clause

# Library
add_subdirectory(RGBDRosConversionUtils)

# Devices
add_subdirectory(ControlBoard_nws_ros)
add_subdirectory(FrameGrabber_nws_ros)
add_subdirectory(frameTransformGet_nwc_ros)
add_subdirectory(frameTransformSet_nwc_ros)
add_subdirectory(laserFromRosTopic)
add_subdirectory(localization2D_nws_ros)
add_subdirectory(map2D_nws_ros)
add_subdirectory(mobileBaseVelocityControl_nws_ros)
add_subdirectory(multipleAnalogSensorsRosPublishers)
add_subdirectory(odometry2D_nws_ros)
add_subdirectory(Rangefinder2D_nws_ros)
add_subdirectory(RGBDSensor_nws_ros)
add_subdirectory(RGBDSensorFromRosTopic)
add_subdirectory(RGBDToPointCloudSensor_nws_ros)
